--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>正在重定向…… - walterlv</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>正在重定向…… - walterlv</title>
+    </head>
     <script language="javascript">
         var domain = "blog.gensokyo.me";
         var current = window.location.href;
@@ -15,3 +15,4 @@
     <body>
         正在重定向……
     </body>
+</html>
